# Fastipy

./: .gitignore  README.md  install.bat  install.sh  main.py  pyforgeapi.py  pyhermes.py  requirements.txt  setup.cfg  setup.py  setup.sh  testStress.py
app/Fastipy/src/core/: reply.py  server.py
app/Fastipy/src/exceptions/: exception_handler.py  reply_exception.py
app/Fastipy/src/models/: body.py  form.py
app/Fastipy/src/utils/: ready.py
app/PyForgeAPI/: __init__.py
app/PyForgeAPI/src/classes/: body.py  database.py  file.py  form.py  handler.py  handler_exception.py  request.py  (+2 more)
app/examples/Chat API/: main.py
app/fastify/: __init__.py
app/fastipy/: __init__.py
app/fastipy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
classes/: Handler.py  Request.py  Response.py  handler.py  request.py  response.py
decorators/: Handler.py  Routes.py  routes.py
examples/: get.py
examples/Chat API/: app.py  chat.json  main.py
examples/Database Chat/: jwt.py  main.py
examples/Person API/: app.py  main.py
exceptions/: InvalidPath.py  duplicate_route.py  invalid_path.py
functions/: path_validate.py  printReady.py  ready.py
src/PyForgeAPI/: __init__.py
src/PyForgeAPI.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/PyForgeAPI/classes/: body.py  cors.py  database.py  file.py  form.py  handler.py  handler_exception.py  request.py  response.py  server.py  timer.py
src/PyForgeAPI/decorators/: module.py  routes.py
src/PyForgeAPI/exceptions/: duplicate_route.py
src/PyForgeAPI/functions/: build_route_path.py  path_validate.py  ready.py
(+61 files in other folders)
