[metadata]
name = PyForgeAPI
version = 1.3.2
author = Viinilv
author_email = luisvpersy@gmail.com
description = PyForgeAPI is a fast and easy-to-use open source python library for developing RESTful APIs. It provides a clear and concise syntax for handling routes, requests, and responses, making the development of APIs faster and more efficient. With support for form parameters, body and route parameters, it is useful for handling different types of requests. Whether you are a beginner or an experienced developer, PyForgeAPI is a simple and powerful choice for creating robust and scalable APIs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/luisviniciuslv/PyForgeAPI
project_urls =
    Bug Tracker = https://github.com/luisviniciuslv/PyForgeAPI/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src